Ticket Selection implemented

--- a/src/App.css
+++ b/src/App.css
@@ -133,7 +133,7 @@ html {
 
 .plane {
   margin: 20px auto;
-  max-width: 300px;
+  max-width: 500px;
 }
 
 .cockpit {
@@ -199,36 +199,42 @@ ol {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: flex-start;
+  justify-content: center;
+}
+
+.selected {
+  z-index: 1;
+  text-align: center;
+  margin-bottom: 25px;
+
 }
 
 .seat {
+  color: white;
   display: flex;
-  flex: 0 0 14.28571428571429%;
+  flex: 0 0 10%;
   padding: 5px;
   position: relative;
 }
-.seat:nth-child(3) {
-  margin-right: 14.28571428571429%;
+.seat:nth-child(4) {
+  margin-right: 10%;
 }
 .seat input[type=checkbox] {
   position: absolute;
   opacity: 0;
 }
 .seat input[type=checkbox]:checked + label {
-  background: #bada55;
+  background: orange;
   -webkit-animation-name: rubberBand;
   animation-name: rubberBand;
   animation-duration: 300ms;
   animation-fill-mode: both;
 }
 .seat input[type=checkbox]:disabled + label {
-  background: #dddddd;
-  text-indent: -9999px;
+  background: #F42536;
   overflow: hidden;
 }
 .seat input[type=checkbox]:disabled + label:after {
-  content: "X";
   text-indent: 0;
   position: absolute;
   top: 4px;
@@ -248,7 +254,7 @@ ol {
   font-weight: bold;
   line-height: 1.5rem;
   padding: 4px 0;
-  background: #F42536;
+  background: green;
   border-radius: 5px;
   animation-duration: 300ms;
   animation-fill-mode: both;
